base/portfolio/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: default
spec:
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
